# Secure_File_Framework

./: LICENSE  MANIFEST.in  README.md  document.txt  pyproject.toml
secure_file/: __init__.py  secure_file.py
